--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,10 @@
 <resources>
-    <string name="app_name">Serviços_Gerais</string>
+    <string name="app_name">Notice App</string>
     <string name="texto_cadastro">Cadastre-se aqui</string>
     <string name="titulo_cadastro">Cadastre-se</string>
     <string name="botao_cadastro">Cadastrar</string>
     <string name="tela_login">Login</string>
     <string name="logoff">Deslogar</string>
-    <string name="todo">TODO</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="login"> Entrar </string>
+    <string name="entrar">Entrar</string>
 </resources>
