--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="logoff">Deslogar</string>
     <string name="login"> Entrar </string>
     <string name="entrar">Entrar</string>
+    <string name="news_app">NEWS APP</string>
+    <string name="email">Email</string>
+    <string name="senha">Senha</string>
 </resources>
