--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Notice App</string>
+    <string name="app_name">News App</string>
     <string name="texto_cadastro">Cadastre-se aqui</string>
     <string name="titulo_cadastro">Cadastre-se</string>
     <string name="botao_cadastro">Cadastrar</string>
